--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 		"removeComments": false,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
-		"sourceMap": true,
+		"sourceMap": false,
 		"strict": true,
 		"target": "ES2022"
 	},
