update-player-names-command - Add new rule and package for interacting with google spreadsheet.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,9 @@
 		"semi-style": [
 			"error",
 			"last"
+		],
+		"@typescript-eslint/non-nullable-type-assertion-style": [
+			"off"
 		]
 	}
 }
