--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"discord.js": "^14.14.1",
-		"dotenv": "^16.4.1"
+		"dotenv": "^16.4.1",
+		"googleapis": "^134.0.0"
 	},
 	"devDependencies": {
 		"@stylistic/eslint-plugin": "^1.6.0",
